--- a/mash.css
+++ b/mash.css
@@ -433,4 +433,9 @@ select:focus{
 #storageForm .row{
   margin-top: 10px;
 }
+@media (min-width: 721px){
+  #storageForm .grid > div{
+    max-width: 420px;
+  }
+}
 
